tests/neg-custom-args/captures/usingLogFile-alt.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/usingLogFile-alt.scala:21:24 -----------------------------
21 |      usingLogger(file)(l => () => l.log("test"))  // error
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^
   |          Found:    (l: Test.Logger{val f: java.io.OutputStream^?}^{file}) ->? box () ->? Unit
   |          Required: (x$0: Test.Logger^{file}) ->{'cap[..<root>](from instantiating usingLogger)} box () ->? Unit
   |
   |          Note that reference (cap[Logger] : caps.Root), defined at level 1
   |          cannot be included in outer capture set ?, defined at level 0 in package <root>
   |
   | longer explanation available when compiling with `-explain`
